# verdant

./: .gitignore  Cargo.toml  README.md
bloom/: Cargo.toml
bloom/src/: colour.rs  config.rs  errors.rs  ipc.rs  lib.rs  log.rs  status.rs  time.rs
common/: Cargo.toml
common/src/: colour.rs  lib.rs  utils.rs
examples/: config.toml  default.conf
examples/modules/: default.conf
examples/services/: acpid.vs  chronyd.vs  console-setup.vs  crond.vs  eth0-up.vs  lo-up.vs  network-pre.vs  syslog.vs  syslogd.vs  tty1.vs  tty@.vs  udhcpc.vs  udhcpc@.vs  wpa_supplicant.vs
init/: Cargo.toml
init/src/: actions.rs  device_manager.rs  env.rs  filesystem.rs  fs.rs  hardware_drivers.rs  hostname.rs  ipc_server.rs  kernel.rs  main.rs  modules.rs  mount.rs  network.rs  process.rs  run.rs  seed.rs  service_manager.rs  setup.rs  signal.rs  tty.rs  unmount.rs  utils.rs
ipc_protocol/: Cargo.toml
ipc_protocol/src/: lib.rs
vctl/: Cargo.toml
vctl/src/: main.rs
verdant-init/: Cargo.toml
verdant-init/src/: handoff.rs  hostname.rs  main.rs  modules.rs  mount.rs  process.rs  setup.rs
verdantctl/: Cargo.toml
verdantctl/src/: main.rs
verdantd/: Cargo.toml
verdantd/src/: control.rs  ipc.rs  ipc_server.rs  loader.rs  main.rs  managed_service.rs  manager.rs  module_loader.rs  ordering.rs  parser.rs  pid_lock.rs  process.rs  runtime.rs  runtime.rs.bak  service.rs  service_file.rs  service_runner.rs  shutdown.rs  shutdown_manager.rs  signal.rs  sort.rs  supervisor.rs  tty.rs
verdantd/src/runtime/: dependency.rs  mod.rs  service_manager.rs  service_ops.rs  supervisor.rs  system_action.rs
