[package]
name = "init"
version = "0.1.0"
edition = "2024"

[dependencies]
bloom = { path = "../bloom" }
libc = "0.2.174"
nix = { version = "0.30.1", features = ["fs", "mount", "process", "signal", "socket"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
threadpool = "1.8.1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
toml = "0.8.23"
udev = "0.9.3"
walkdir = "2.5.0"
wait-timeout = "0.2"
