[package]
name = "verdantctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ipc_protocol = { path = "../ipc_protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
