[package]
name = "verdantd"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
ipc_protocol = { path = "../ipc_protocol" }
anyhow = "1.0"
nix = { version = "0.30.1", features = ["process", "signal", "mount", "reboot"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
tokio = { version = "1.45.1", features = ["full"] }
